# skills_assessment

./: .gitignore  DialoGPT_finetuning_Chatbot_on__questıonnaıry.ipynb  package-lock.json  package.json
.github/workflows/: docker-build-push.yml
chat_api/: .dockerignore  .gitignore  README.md  dockerfile  pyproject.toml
chat_api/app/: main.py
chat_ui/: README.md  dockerfile  package-lock.json  package.json
chat_ui/public/: index.html
chat_ui/src/: App.tsx
chat_ui/src/components/: ChatUI.tsx
data/: test_data orig.json  test_data.json  train_data.json  train_data_orig.json  train_data_questionsjson
