[tool.poetry]
name = "chat-api"
version = "0.1.0"
description = ""
authors = ["Marat Khabibullin <khabibullin.m.m@gmail.com>"]
readme = "README.md"
packages = [{include = "chat_api"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
